# hw_infro

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yml  plan.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  architecture.md  balancing.md  testing.md
grafana/provisioning/dashboards/: platform_dashboard.json
load_tests/: locustfile.py
load_tests/scenarios/: basic_load.py  peak_load.py  provider_failure.py
mock_llm_server/: Dockerfile  server.py
prometheus/: prometheus.yml
src/: config.py  main.py
src/agents/: base.py  billing_agent.py  diagnostics_agent.py  faq_agent.py  human_router_agent.py  registry.py
src/agents/tools/: billing_tools.py  common.py  diagnostics_tools.py  faq_tools.py
src/auth/: __init__.py  token_auth.py
src/gateway/: middleware.py  router.py
src/guardrails/: __init__.py  engine.py  pii_filter.py  prompt_injection.py  secret_detector.py
src/llm/: anthropic_provider.py  balancer.py  mock_provider.py  openai_provider.py  provider.py  registry.py
src/routing/: classifier.py  graph.py
src/telemetry/: metrics.py  mlflow_tracer.py  otel_setup.py
tests/: test_agents.py  test_auth.py  test_balancer.py  test_gateway.py  test_guardrails.py  test_registry.py
