[project]
name = "agent-platform"
version = "0.1.0"
description = "Multi-agent tech support platform with LLM balancing"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
